--- a/NEWS
+++ b/NEWS
@@ -63,4 +63,6 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 042 ==> 356939 - Advanced slide show: playing sound track does not work.
 043 ==> 361329 - Flickr uploader does not clean /tmp after upload.
 044 ==> 353135 - Unable to sign in to Flickr or Facebook, Geolocation Search in GeoNames.
-045 ==> 
+045 ==> 358759 - Unable to import/export from google photos.
+046 ==> 
+
