--- a/NEWS
+++ b/NEWS
@@ -64,5 +64,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 043 ==> 361329 - Flickr uploader does not clean /tmp after upload.
 044 ==> 353135 - Unable to sign in to Flickr or Facebook, Geolocation Search in GeoNames.
 045 ==> 358759 - Unable to import/export from google photos.
-046 ==> 
-
+046 ==> 363925 - Export Menu - Export to Smugmug not working.
+047 ==> 
