--- a/NEWS
+++ b/NEWS
@@ -66,3 +66,7 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 045 ==> 358759 - Unable to import/export from google photos.
 046 ==> 363925 - Export Menu - Export to Smugmug not working.
 047 ==> 363913 - Improve export menu structure.
+048 ==> 309613 - Crash on exit after unsucessful photo time adjustment.
+049 ==> 303878 - digikam crashed after clicking "Photo -> Adjust Date and Time".
+050 ==> 150191 - Embedded thumbnail date is used for sorting.
+051 ==> 296113 - Regression: Can't transfer EXIF creation date to file date.
