--- a/NEWS
+++ b/NEWS
@@ -71,3 +71,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 050 ==> 150191 - Embedded thumbnail date is used for sorting.
 051 ==> 296113 - Regression: Can't transfer EXIF creation date to file date.
 052 ==> 363162 - dngconverter crashes when converting any RAW file.
+053 ==> 302292 - Gwenview crashes when batch editing EXIF data.
+054 ==> 
