--- a/NEWS
+++ b/NEWS
@@ -10,4 +10,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 002 ==> 231584 - digiKam crashes when asked to print image.
 003 ==> 311020 - kipi plugins print some pages in reverted colors.
 004 ==> 329899 - Print Assistant (Print Wizard) showing incorrect page sizes.
-005 ==> 
+005 ==> 365049 - Export to Piwigo not working - Dialog box not responding.
+006 ==> 
