--- a/NEWS
+++ b/NEWS
@@ -14,4 +14,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 006 ==> 365676 - improper handling of temporary directory.
 007 ==> 308783 - No photo attachments when items are shared by e-mail.
 008 ==> 365571 - Flickr export plugin not freeing tmp space.
-009 ==> 
+009 ==> 360404 - Imgur autorization not work : Integrate Oauth2 library in libkipiplugins [patch].
+010 ==> 
