--- a/README
+++ b/README
@@ -27,27 +27,13 @@ RajceExport        : A tool to export images to Rajce web service (http://www.ra
 Vkontakte          : A tool to export images to VKontakte web service (http://www.vkontakte.ru)
 ImageShack         : A tool to export images to ImageShack web service (http://imageshack.us)
 ImgurExport        : A tool to export images to ImgUr web service (http://imgur.com)
-PrintImage         : A tool to print images in various format.
+PrintImage         : A tool to export images to print devices.
 
 -- DEPENDENCIES -------------------------------------------------------
 
-CMake           >= 3.0.0                        http://www.cmake.org
-ECM             >= 1.7.0                        https://projects.kde.org/projects/kdesupport/extra-cmake-modules
-libqt           >= 5.4.0                        http://www.qtsoftware.com
-libkde          >= 5.5.0                        http://www.kde.org
-libkipi         >= 5.0.0                        https://projects.kde.org/projects/kde/kdegraphics/libs/libkipi
+See the complete list of dependencies at this url:
 
-Optional:
-
-libkio          >= 5.0.0                        https://projects.kde.org/projects/frameworks/kio
-libkarchive     >= 5.0.0                        https://projects.kde.org/projects/frameworks/karchive
-libmediawiki    >= 5.0.0                        https://projects.kde.org/projects/extragear/libs/libmediawiki
-libkvkontakte   >= 4.70.0                       https://projects.kde.org/projects/extragear/libs/libkvkontakte
-
-Plugin Specific Dependencies (for compiling and for running) :
-
-Mediawiki          : libmediawiki.
-Vkontakte          : libkvkontakte.
+https://quickgit.kde.org/?p=digikam-software-compilation.git&a=blob&f=DEPENDENCIES
 
 -- CONTACT ------------------------------------------------------------
 
