add function to copy files to the destination directory BUGS: 370025 FIXED-IN: 5.3.0

--- a/NEWS
+++ b/NEWS
@@ -7,4 +7,5 @@ NEW FEATURES:
 BUGFIXES FROM BUGZILLA :
 
 001 ==> 369630 - Unable to export movie to google photo.
-002 ==> 
+002 ==> 370025 - KMLExport cannot move data to destination directory.
+003 ==> 
