--- a/NEWS
+++ b/NEWS
@@ -8,4 +8,5 @@ General : JAlbumExport plugin renamed as JAlbum and porting to Qt5.
 BUGFIXES FROM BUGZILLA :
 
 001 ==> 374441 - Export original file to Flickr [patch].
-002 ==> 
+002 ==> 375729 - Broken google photos upload.
+003 ==> 
