--- a/NEWS
+++ b/NEWS
@@ -10,4 +10,5 @@ BUGFIXES FROM BUGZILLA :
 001 ==> 374441 - Export original file to Flickr [patch].
 002 ==> 375729 - Broken google photos upload.
 003 ==> 375833 - Flickr export converts all images to JPEG.
-004 ==> 
+004 ==> 376184 - Gwenview not able to resize pictures to send them per e-mail.
+005 ==> 
