--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Kipi-plugins 5.6.0 - Release date: 2017/0?/??
+Kipi-plugins 5.6.0 - Release date: 2017/05/07
 ------------------------------------------------------------------------
 
 NEW FEATURES:
