fix print assistant if not exist a metadata processor from the host application BUGS: 377837 FIXED-IN: 5.6.0

--- a/NEWS
+++ b/NEWS
@@ -7,4 +7,5 @@ NEW FEATURES:
 BUGFIXES FROM BUGZILLA :
 
 001 ==> 349270 - Missing direct .png image URL.
-002 ==> 
+002 ==> 377837 - Gwenview crashed while using print assistant plugin.
+003 ==> 
