--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-KIPIPLUGINS PROJECT (http://www.digikam.org)
+KIPIPLUGINS PROJECT
 
 -- AUTHORS ------------------------------------------------------------
 
@@ -6,36 +6,13 @@ See AUTHORS file for details.
 
 -- ABOUT --------------------------------------------------------------
 
-Libkipi and kipi-plugins allow image applications such as digiKam (http://www.digikam.org)
-to use a plugin architecture for additional functionalities.
+Libkipi and kipi-plugins allow image applications to use a plugin architecture for additional functionalities.
 
 Notes:
 
 kipi-plugins is based in part on the work of the Independent JPEG Group.
 
-Facebook           : A tool to import/export images to/from a remote Facebook web service (http://www.facebook.com).
-Flickr             : A tool to export images to a remote Flickr based web service (http://www.flickr.com). Also compatible with Zooomr and 23HQ.
-GoogleServices     : A tool to export images to Google web services.
-Smug               : A tool to import/export images to/from a remote SmugMug web service (http://www.smugmug.com).
-SendImages         : A tool to export images by e-mail.
-FlashExport        : A tool to export images to Flash using SimpleViewer (http://www.airtightinteractive.com/simpleviewer).
-RemoteStorage      : A tool to export images to remote storage using network protocols as FTP, SSH, SAMBA... (based on KIO).
-Piwigo             : A tool to export images to a remote Piwigo (PHPWebGallery) server (http://piwigo.org).
-YandexFotki        : A tool to export images to Yandex web service (http://fotki.yandex.ru).
-MediaWiki          : A tool to export images to Mediawiki based web service (http://www.mediawiki.org).
-RajceExport        : A tool to export images to Rajce web service (http://www.rajce.idnes.cz).
-Vkontakte          : A tool to export images to VKontakte web service (http://www.vkontakte.ru)
-ImageShack         : A tool to export images to ImageShack web service (http://imageshack.us)
-ImgurExport        : A tool to export images to ImgUr web service (http://imgur.com)
-PrintImage         : A tool to export images to print devices.
-
--- DEPENDENCIES -------------------------------------------------------
-
-See the complete list of dependencies at this url:
-
-https://quickgit.kde.org/?p=digikam-software-compilation.git&a=blob&f=DEPENDENCIES
-
--- CONTACT ------------------------------------------------------------
+-- BUGS ---------------------------------------------------------------
 
 IMPORTANT : the bugreports and wishlist are hosted by the KDE bugs report 
 system who can be contacted by the standard Kde help menu of plugins dialog. 
