--- a/NEWS
+++ b/NEWS
@@ -7,4 +7,5 @@ NEW FEATURES:
 BUGFIXES FROM BUGZILLA :
 
 001 ==> 381144 - SmugMug export max dimension limited to 5000 pixels.
-002 ==> 
+002 ==> 381664 - Plugin leads to the home page of Flickr and 'An error has occurred: Invalid Frob It can not be continued.'
+003 ==> 
