--- a/NEWS
+++ b/NEWS
@@ -8,4 +8,5 @@ BUGFIXES FROM BUGZILLA :
 
 001 ==> 381144 - SmugMug export max dimension limited to 5000 pixels.
 002 ==> 381664 - Plugin leads to the home page of Flickr and 'An error has occurred: Invalid Frob It can not be continued.'
-003 ==> 
+003 ==> 383988 - Imgur plugin does not provide authentication mechanism.
+004 ==> 
