--- a/flickr/README
+++ b/flickr/README
@@ -1,6 +1,5 @@
 ------------------------------------------------------
-Kipi exporter for Flickr, 23HQ and Zooomr web services
+Kipi exporter for Flickr and 23HQ web services
 ------------------------------------------------------
 
 This product uses the Flickr API but is not endorsed or certified by Flickr.
-This product uses the Zooomr API but is not endorsed or certified by Zooomr.
