--- a/NEWS
+++ b/NEWS
@@ -8,4 +8,5 @@ BUGFIXES FROM BUGZILLA :
 
 001 ==> 384260 - Export to flickr includes un-checked tag group names.
 002 ==> 384826 - Flickr export broken.
-003 ==> 
+003 ==> 381969 - Cannot log on flickr exporter.
+004 ==> 
