--- a/NEWS
+++ b/NEWS
@@ -10,4 +10,5 @@ BUGFIXES FROM BUGZILLA :
 002 ==> 384826 - Flickr export broken.
 003 ==> 381969 - Cannot log on flickr exporter.
 004 ==> 388271 - Fix for flickr authentication generates URL that can't work on Windows.
-005 ==> 
+005 ==> 381354 - Dropbox export: API v1 deprecation.
+006 ==> 
