--- a/NEWS
+++ b/NEWS
@@ -11,4 +11,6 @@ BUGFIXES FROM BUGZILLA :
 003 ==> 381969 - Cannot log on flickr exporter.
 004 ==> 388271 - Fix for flickr authentication generates URL that can't work on Windows.
 005 ==> 381354 - Dropbox export: API v1 deprecation.
-006 ==> 
+006 ==> 232516 - Importing photos from dropbox directory causes crash.
+007 ==> 386044 - digiKam Segfault on Dropbox export.
+008 ==> 
