--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Kipi-plugins 5.9.0 - Release date: 2018/xx/xx
+Kipi-plugins 5.9.0 - Release date: 2018/02/25
 ------------------------------------------------------------------------
 
 NEW FEATURES:
