--- a/HACKING
+++ b/HACKING
@@ -87,7 +87,7 @@ class A
 {
 public: // aligned to left 
 ...
-private slots: // aligned to left 
+private Q_SLOTS: // aligned to left 
 
 
 Follow a consistent order in defining these attributes. The recommended
